<resources>
    <string name="app_name">Dive Shops</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="mantra">Don\'t Stress, Enjoy your dive</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="label_login_as">Login as</string>
    <string name="action_login">Login</string>
    <string name="action_signup">Sign Up</string>
    <string name="error_field_required">This field is required</string>
    <string name="label_diver">Diver</string>
    <string name="label_dive_shop">Dive Shop</string>
    <string name="label_account_type">Account Type</string>
    <string name="toast_specify_account_type">Please specify account type</string>
    <string name="action_view_daily_trips">View daily trips</string>
    <string name="dummy_longtext"><![CDATA[Seaquest is one of the longest established and most experienced scuba diving operations in the Philippines. In combination with Oasis Resort in Panglao, Bohol & Sumisid Lodge in Moalboal, Cebu we offer our guest a complete diving holiday. Aside from hotel accommodations we also offer Island hopping, dive safaris, all PADI scuba diving courses in multiple languages, land tours, transfers, domestic flights, everything to suit your holiday needs. You can find all the information about our accommodations, dive centers and safari on this website.  We hope to welcome you soon in one of our locations in Cebu or Bohol.]]></string>
    <string name="dummy_price">PHP2000.00</string>
    <string name="label_per_dive">Per dive: </string>
    <string name="title_courses">Courses</string>
    <string name="dummy_title">Title</string>
    <string name="action_more">More</string>
    <string name="action_book_now">Book now</string>
    <string name="title_special_service">Special service</string>
    <string name="dummy_special_service">This is just a dummy special service.. The Dive Shop is an authorized, full-service dealer for Aqua Lung, Scubapro, and Henderson. You can rest assured the equipment you purchase or rent from us is of the highest quality. In addition to equipment sales and rentals, we offer equipment services. Professional care is the key to long lasting equipment!</string>
    <string name="error_empty_account_details">Oops something is wrong.</string>
    <string name="error_account_not_valid">Account is not valid. Try again</string>
    <string name="title_boats">Boats</string>
    <string name="title_nav_dive_shop_profile">Dive Shop Profile</string>
    <string name="title_nav_daily_trips">Daily Trips</string>
    <string name="title_nav_courses">Courses</string>
    <string name="title_nav_boats">Boats</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_logout">Logout</string>
    <string name="title_login">Login</string>
    <string name="dummy_subtitle">Subtitle</string>
    <string name="dummy_date">Feb 1, 2017</string>
    <string name="text_dive_spot">Balicasag</string>
    <string name="dummy_time">8:00AM</string>
    <string name="label_start">Start</string>
    <string name="title_daily_trips">Daily Trips</string>
    <string name="title_sort">Sort</string>
    <string name="menu_price_low_high">Price (low - high)</string>
    <string name="menu_rating_low_high">Rating (low - high)</string>
    <string name="label_end">End</string>
    <string name="hint_select_dive_site">Select Dive Site</string>
    <string name="message_empty_trip">No available trips</string>
    <string name="message_empty_list">No item found</string>
    <string name="message_empty_search">No dive site found</string>
    <string name="action_add_trip">Add trip</string>
    <string name="label_time">Time:</string>
    <string name="dummy_location">Balicasag, Alona, Panglao Bohol</string>
    <string name="dummy_guides">1. Joseph Mangmang\n2. Alex Zo</string>
    <string name="dummy_group_size">9</string>
    <string name="action_edit">Edit</string>
    <string name="dummy_price_summary">Per Dive: P1,200\nEquipement: P300\nEnvironmental Fee: P100\nGasoline Fee: P200</string>
    <string name="dummy_guests">1. Joseph Mangmang\n2. Joshua Lee\n3. Hanna Chan</string>
    <string name="hint_group_size">Group Size</string>
    <string name="hint_time">Time</string>
    <string name="dummy_date_time">February 4, 2017 8:00AM</string>
    <string name="hint_number_of_dive">Number of Dive</string>
    <string name="hint_price">Price</string>
    <string name="hint_price_notes">Price Notes</string>
    <string name="label_add_more">Add More</string>
    <string name="title_dive_sites">Dive Sites</string>
    <string name="title_guides">Guides</string>
    <string name="title_create_trip">Create Trip</string>
    <string name="hint_search">Search</string>
    <string name="action_done">Done</string>
    <string name="error_no_service_provider">No Service Provider Available</string>
    <string name="hint_search_boat">Search Boat...</string>
    <string name="hint_search_guide">Search Guide...</string>
    <string name="hint_search_dive_site">Search Dive Site...</string>
    <string name="menu_save">Save</string>
    <string name="error_empty_dive_sites">Dive Site cannot be empty</string>
    <string name="title_destinations">Destinations</string>
    <string name="title_conversations_selected">%d selected</string>
    <string name="menu_delete">Delete</string>
    <string name="toast_daily_trip_deleted">Daily Trips successfully deleted</string>
    <string name="dialog_title_delete_trip">Delete selected Trip?</string>
    <string name="dialog_message_delete_trip">This will permanently delete the selected daily trip.</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="title_no_item">No item</string>
    <string name="title_edit_trip">Edit Trip</string>
    <string name="toast_saved">Saved</string>
    <string name="menu_price_high_low">Price (high - low)</string>
    <string name="menu_rating_high_low">Rating (high - low)</string>
    <string name="menu_date">Date</string>
    <string name="title_nav_guides">Guides</string>
    <string name="action_add_guide">Add guide</string>
    <string name="action_add">Add</string>
    <string name="hint_course">Course</string>
    <string name="hint_search_course">Search Course</string>
    <string name="title_add_course">Add Course</string>
    <string name="hint_name">Name</string>
    <string name="hint_description">Description</string>
    <string name="title_add_boat">Add Boat</string>
    <string name="title_edit_boat">Edit Boat</string>
    <string name="title_edit_course">Edit Course</string>
    <string name="title_edit_guide">Edit Guide</string>
    <string name="title_add_guide">Add Guide</string>
    <string name="hint_address">Address</string>
    <string name="hint_price_per_dive">Price Per Dive</string>
    <string name="hint_special_service">Special Service</string>
    <string name="hint_contact_number">Contact Number</string>
    <string name="hint_search_address">Search Address</string>
    <string name="menu_edit">Edit</string>
    <string name="title_edit_dive_shop">Edit Dive Shop</string>
    <string name="dialog_title_select_address">Select Address</string>
    <string name="hint_location">Location</string>
    <string name="title_select_location">Select Location</string>
    <string name="dialog_title_change_profile_cover">Change profile cover</string>
    <string name="label_result_filter">Result filter</string>
    <string name="hint_select_dive_shop">Select dive shop</string>
    <string name="hint_dive_site">Dive Site</string>
    <string name="hint_dive_shop">Dive Shop</string>
    <string name="dummy_dive_shop_name">Seaquest</string>
    <string name="dummy_spot_left">10 spots left</string>
    <string name="label_number_of_dives">Number of dive(s):</string>
    <string name="label_group_size">Group size:</string>
    <string name="label_remaining_slots">Remaining slots:</string>
    <string name="no_guide">No guide</string>
    <!-- DateUtils -->
    <string name="DateUtils_now">Now</string>
    <string name="DateUtils_minutes_ago">%d min</string>
    <string name="DateUtils_today">Today</string>
    <string name="DateUtils_yesterday">Yesterday</string>
    <string name="dummy_address">Alona, Panglao, Bohol, Philippines</string>
    <string name="action_show_more">Show more</string>
    <string name="title_shop_description">Shop Description</string>
    <string name="error_something_wrong">Oops. Something went wrong. Please try again.</string>
    <string name="retry">Retry</string>
    <string name="title_description">Description</string>
    <string name="title_additional_information">Additional Information</string>
    <string name="title_about_me">About Me</string>
    <string name="title_who_should_take_this_course">Who should take this course?</string>
    <string name="title_what_will_you_learn">What will you learn</string>
    <string name="title_what_scuba_gear_will_you_use">What scuba gear will you use?</string>
    <string name="label_offered_by">Offered by:</string>
    <string name="action_take">Take</string>
    <string name="action_map">Map</string>
    <string name="action_sort_filter">Sort/Filter</string>
    <string name="title_dive_shops">Dive Shops</string>
    <string name="title_nav_dive_shops">Dive Shops</string>
    <string name="menu_search">Search</string>
    <string name="action_list">List</string>
    <string name="action_search">Search</string>
    <string name="action_show_filter">Show Filter</string>
    <string name="action_hide_filter">Hide Filter</string>
    <string name="action_filter">FIlter</string>
    <string name="action_register">Register</string>
    <string name="title_register">Register</string>

    <!-- plurals.xml -->
    <plurals name="hours_ago">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="remaining_slots">
        <item quantity="one">1 spot left</item>
        <item quantity="other">%d spots left</item>
    </plurals>
</resources>
