<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_sort_black"
        android:title="@string/title_sort"
        app:showAsAction="ifRoom">
        <menu>
            <group
                android:id="@+id/menu_group_short_option"
                android:checkableBehavior="single">
                <item
                    android:checked="true"
                    android:id="@+id/menu_sort_date"
                    android:title="@string/menu_date" />
                <item
                    android:id="@+id/menu_sort_price_low_high"
                    android:title="@string/menu_price_low_high" />

                <item
                    android:id="@+id/menu_sort_price_high_low"
                    android:title="@string/menu_price_high_low" />
                <item
                    android:id="@+id/menu_sort_rating_low_high"
                    android:title="@string/menu_rating_low_high" />
                <item
                    android:id="@+id/menu_sort_rating_high_low"
                    android:title="@string/menu_rating_high_low" />
            </group>
        </menu>
    </item>
</menu>