<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_medium"
        android:paddingRight="@dimen/margin_medium">

        <Button
            android:id="@+id/button_view_daily_trips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_space"
            android:text="@string/action_view_daily_trips"
            android:textSize="@dimen/roboto_button_medium" />

        <com.divetym.dive.view.RobotoTextView
            android:id="@+id/text_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_space"
            android:inputType="textCapSentences|textMultiLine"
            android:textSize="@dimen/roboto_body_1_regular"
            tools:text="@string/dummy_longtext" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_space"
            android:orientation="horizontal">

            <com.divetym.dive.view.RobotoTextView
                android:id="@+id/robotoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/view_space"
                android:text="@string/label_per_dive"
                android:textSize="@dimen/roboto_title_medium"
                android:textStyle="bold"
                app:typeface="roboto_medium" />

            <com.divetym.dive.view.RobotoTextView
                android:id="@+id/text_price_per_dive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/roboto_title_medium"
                app:typeface="roboto_medium"
                tools:text="@string/dummy_price" />
        </LinearLayout>

        <com.divetym.dive.view.ListPreviewLayout
            android:id="@+id/preview_courses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_space" />

        <com.divetym.dive.view.ListPreviewLayout
            android:id="@+id/preview_boats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_space" />

        <com.divetym.dive.view.ListPreviewLayout
            android:id="@+id/preview_guides"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_space" />

        <com.divetym.dive.view.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_space"
            android:text="@string/title_special_service"
            android:textSize="@dimen/roboto_title_medium"
            android:textStyle="bold"
            app:typeface="roboto_medium" />

        <com.divetym.dive.view.RobotoTextView
            android:id="@+id/text_special_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_space"
            android:textSize="@dimen/roboto_body_1_regular"
            tools:text="@string/dummy_special_service" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>