<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_small"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/hint_time"
                app:typeface="roboto_regular" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_group_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_group_size"
                android:inputType="numberSigned" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_number_of_dive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_number_of_dive"
                android:inputType="numberSigned" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_price"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_price_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:minLines="3"
                android:hint="@string/hint_price_notes"
                android:inputType="textMultiLine|textCapSentences"
                android:maxLines="5" />
        </android.support.design.widget.TextInputLayout>

        <com.divetym.dive.view.ListAddMoreLayout
            android:id="@+id/list_addmore_site"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.divetym.dive.view.ListAddMoreLayout
            android:id="@+id/list_addmore_boat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.divetym.dive.view.ListAddMoreLayout
            android:id="@+id/list_addmore_guide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>